updated the bottom nv due to z-index issues
added z-index: 6; on line 118

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -115,6 +115,7 @@ html {
 	display: grid;
 	grid-template-columns: 20% 20% 20% 20% 20%;
 	background: #000;
+	z-index: 6;
 }
 
 .app__nav.bottom .nav-user-image {
